assets/styles.scss
/* ... */
@media screen and (max-width: 39.9375em) {
    header .CircleBadge--large {
        width: 128px;
    }

    .timeline {
        margin: 0;
        padding: 0;
        width: 92%;

        &::before {
            left: 0;
        }

        .timeline-item {
            .timeline-content {
                float: right;
                text-align: left;
                width: 92%;

                &::before, &.right::before {
                    border-left: 0;
                    border-right: 7px solid $timeline-color;
                    left: 10%;
                    margin-left: -6px;
                }

                &.left .timeline-date::before {
                    content: '\2014\00a0';
                }

                &.left .timeline-date::after {
                    content: '';
                }
            }

            .timeline-icon {
                left: 0;
            }
        }
    }
}

.emoji {
    line-height: 100%;
    display: inline-block;
    vertical-align: text-top;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;

    &.wave-hand {
        background-image: url('../assets/wave.png');
        margin-left: 10px;
        cursor: pointer;
    }
}

footer {
    // @include linear_gradient(top, rgba(0,0,0,0), rgba(0,0,0,0), rgba($theme-color, 0.05), rgba($theme-color, 0.08));

    a {
        font-weight: 500;
        transition: color ease-in 250ms;
        -webkit-transition: color ease-in 250ms;

        &:hover {
            color: $theme-color;
        }
    }

    .copyright a .octicon {
        margin-right: 4px;
    }

    span {
        padding: 0 10px;
    }

    .html5-icon:hover {
        filter: -webkit-drop-shadow(0 2px 5px rgba(228, 76, 38, 0.5));
        filter: -moz-drop-shadow(0 2px 5px rgba(228, 76, 38, 0.5));
        filter: -ms-drop-shadow(0 2px 5px rgba(228, 76, 38, 0.5));
        filter: -o-drop-shadow(0 2px 5px rgba(228, 76, 38, 0.5));
        filter: drop-shadow(0 2px 5px rgba(228, 76, 38, 0.5));
    }

    .css3-icon:hover { //Note: CSS3 icon blue color, no $theme-color!
        filter: -webkit-drop-shadow(0 2px 5px rgba(#1572B6, 0.5));
        filter: -moz-drop-shadow(0 2px 5px rgba(#1572B6, 0.5));
        filter: -ms-drop-shadow(0 2px 5px rgba(#1572B6, 0.5));
        filter: -o-drop-shadow(0 2px 5px rgba(#1572B6, 0.5));
        filter: drop-shadow(0 2px 5px rgba(#1572B6, 0.5));
    }

    .icons a {
        text-decoration: none;

        svg {
            fill: $dark-theme-color !important;
            transition: fill ease-in 250ms;
            -webkit-transition: fill ease-in 250ms;

            &:hover {
                fill: $theme-color !important;
            }
        }
    }
}

